--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ body.popup-open {
 }
 
 .header .logo a {
-	color: #fff;
+	color: #435245;
 	font-size: 30px;
 	line-height: 54px;
 	font-weight: bold;
